; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/cryptui/extr_main.c_add_date_string_to_control.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/cryptui/extr_main.c_add_date_string_to_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOCALE_SYSTEM_DEFAULT = common dso_local global i32 0, align 4
@LOCALE_SSHORTDATE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @add_date_string_to_control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_date_string_to_control(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca [80 x i32], align 16
  %6 = alloca [80 x i32], align 16
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %8 = load i32, i32* @LOCALE_SYSTEM_DEFAULT, align 4
  %9 = load i32, i32* @LOCALE_SSHORTDATE, align 4
  %10 = getelementptr inbounds [80 x i32], [80 x i32]* %5, i64 0, i64 0
  %11 = getelementptr inbounds [80 x i32], [80 x i32]* %5, i64 0, i64 0
  %12 = call i32 @ARRAY_SIZE(i32* %11)
  %13 = call i32 @GetLocaleInfoW(i32 %8, i32 %9, i32* %10, i32 %12)
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @FileTimeToSystemTime(i32* %14, i32* %7)
  %16 = load i32, i32* @LOCALE_SYSTEM_DEFAULT, align 4
  %17 = getelementptr inbounds [80 x i32], [80 x i32]* %5, i64 0, i64 0
  %18 = getelementptr inbounds [80 x i32], [80 x i32]* %6, i64 0, i64 0
  %19 = getelementptr inbounds [80 x i32], [80 x i32]* %6, i64 0, i64 0
  %20 = call i32 @ARRAY_SIZE(i32* %19)
  %21 = call i32 @GetDateFormatW(i32 %16, i32 0, i32* %7, i32* %17, i32* %18, i32 %20)
  %22 = load i32, i32* %3, align 4
  %23 = getelementptr inbounds [80 x i32], [80 x i32]* %6, i64 0, i64 0
  %24 = getelementptr inbounds [80 x i32], [80 x i32]* %6, i64 0, i64 0
  %25 = call i32 @lstrlenW(i32* %24)
  %26 = call i32 @add_unformatted_text_to_control(i32 %22, i32* %23, i32 %25)
  ret void
}

declare dso_local i32 @GetLocaleInfoW(i32, i32, i32*, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32*) #1

declare dso_local i32 @FileTimeToSystemTime(i32*, i32*) #1

declare dso_local i32 @GetDateFormatW(i32, i32, i32*, i32*, i32*, i32) #1

declare dso_local i32 @add_unformatted_text_to_control(i32, i32*, i32) #1

declare dso_local i32 @lstrlenW(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
